[package]
name = "oss-sdk"
version = "0.0.1"
edition = "2018"
readme = "README.md"
description = "OSS rust SDK"
license = "Apache-2.0"
repository = "https://github.com/mybee/oss-rust"

[dependencies]
reqwest = { version = "0.11.4" }
base64 = "0.13.0"
chrono = "0.4"
rust-crypto = "^0.2"
log = "0.4.6"
quick-xml = "0.22.0"
derive_more = "0.99.5"
bytes = "1.1.0"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["full"] }
